update book back item und bereiche

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -46,6 +46,25 @@ Dieses Kapitel beschreibt die neue Aufträge-UI, die im Monat 2022 in einer offe
 Mit der Formulierung "neue Aufträge-UI" meinen wir, dass es in plentymarkets ein neues Menü zur Verwaltung und Abwicklung von Aufträgen gibt.
 * "Offene Beta" bedeutet, dass du die neue Order-UI sehen und ausprobieren kannst. Die neue UI hat allerdings noch nicht den vollen Funktionsumfang.
 
+ 
+Das Menü *Aufträge » Aufträge [Testphase]* ist wie folgt aufgebaut:
+ 
+neue Bild (mehrfarbig für Menübereiche
+image::crm:kontakte-uebersicht.png[width=640, height=360]
+// TODO: Bild einfügen; xref anpassen
+ 
+* *Navigation*: (gelb) In der Navigation links navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Falls du mehrere Aufträge/Auftragstypen gleichzeitig geöffnet hast, werden diese untereinander angezeigt. Klicke auf icon:menu[set=material], um die Navigationsleiste ein- und auszublenden.
+* *Toolbar*: Hier kannst du nach Aufträgen xref:crm:kontakt-suchen.adoc#[suchen], die xref:crm:kontakt-suchen.adoc#spalten-konfigurieren[Spalten in der Übersicht konfigurieren], die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Kontakten klicken. +
+Wenn du mehrere Aufträge gewählt hast (icon:check_box[set=material, role=skyBlue]), kannst du in diesem Bereich auch die xref:crm:kontakt-bearbeiten.adoc#gruppenfunktion[Gruppenfunktion] nutzen.
+* *Hauptfenster*: Hier wird der aktuell geöffnete Bereich angezeigt.
+** *Übersicht*: Wenn du eine xref:crm:kontakt-suchen.adoc#[Suche ausführst], siehst du die Ergebnisse in einer Übersicht. Die Übersicht liefert auf einen Blick Informationen zu den gefundenen Kontakten. Zum Beispiel siehst du die Namen der Kontakte, die Anzahl der Aufträge und die Kundenklasse.
+** *Detailansicht*: Wenn du einen Kontakt öffnest, werden die Details im Hauptfenster auf der rechten Seite angezeigt. Die Detailansicht eines Kontakts ist in die folgenden Bereiche unterteilt: Allgemein, Primäre Adresse, Dokumente, Eigenschaften, Tags, plentyShop-Login, Aufträge, Adressen, Historie, Bankdaten, Firma, Konto, Messenger, Optionen, Tickets.
+ 
+Lerne die Funktionen und Features der neuen Bedienoberfläche in dem folgenden kurzen Video kennen:
+ 
+.Die neue Kontakt-UI mit MyView
+
+
 // TODO: alle xref anpassen
 Du findest in den folgenden Kapiteln Informationen zu eingehenden Aufträgen und wie du nach dem Auftragseingang fortfährst. Je nachdem für welche Verkaufsstrategie und Verkaufskanäle du dich entscheidest, fließen nach erfolgreicher Einrichtung der Kanäle Aufträge verschiedener xref:auftraege:auftragsherkunft.adoc#[Herkünfte] in dein plentymarkets System ein. Neben dem eigenen Webshop sind dies in erster Linie die verschiedenen xref:maerkte:maerkte.adoc#[Marktplätze und Preisportale].
 
@@ -418,7 +437,7 @@ Präfixe erklären ?
 
 . Gehe ins Menü *Aufträge » Aufträge [Testphase]*.
 . Klicke oben rechts auf die Dropdown-Liste der Ansichten (icon:caret-down[role="darkGrey"]).
-. Klicke oben auf icon:plus[role="darkGrey"] *Neue Ansicht erstellen ...*.
+. Klicke oben auf icon:add[set=material] *Neue Ansicht erstellen ...*.
 . Gib einen Namenim Pop up-Fenster ein.
 . Klicke auf *Ansicht erstellen*. +
 → Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. sie wird angewendet.
@@ -502,11 +521,13 @@ Artikelmenge
 Auf der neuen Aufträge UI sind die Informationen in Bereiche aufgeteilt.
 Oberhalb der Bereiche werden neben Dashboard links weitere Tabs angezeigt, z.B. *Aufträge*, *Einrichtung*, *Kontakte*, und man kann schnell von einem zum anderen wechseln.
 
+
 Dashboard
 Über icon:more_vert[set=material] öffnet sich das KontextmenÜ:
 Icon Neu laden
 Icon Im Handbuch nachschlagen - das Handbuch öffnet sich
 Icon Andere Tabs schließen - alle anderen Tabs werden geschlossen
+
 
 [#individual-portlets]
 === Eigene/individualisierte Bereiche
@@ -519,7 +540,7 @@ Die eigenen Bereiche:
 Dank individualisierbarer Bereiche bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Bereich enthalten soll. Du kannst die Bereiche auch anders benennen. In der Seitennavigation links werden dir die Bezeichnungen der Bereiche angezeigt. 
 
 [TIP]
-Über icon:settings[set=material] kannst du für jeden Bereich die Spalten konfigurieren. Du kannst die Reihenfolge über Drag&drop mit einem Klick auf *Verschieben* (icon:drag_indicator[set=material]) verändern. Durch Haken setzen oder Haken herausnehmen kannst du die Anzahl der Spalten verändern.
+Über die Schaltfläche icon:settings[set=material] kannst du für jeden Bereich die Spalten konfigurieren. Du kannst die Reihenfolge über Drag&drop mit einem Klick auf *Verschieben* (icon:drag_indicator[set=material]) verändern. Durch Haken setzen oder Haken herausnehmen kannst du die Anzahl der Spalten verändern. Über *Spalten konfigurieren* (icon:settings[set=material]) kannst du für jeden Bereich Spalten in der Übersicht auch wieder deaktivieren.
 
 [discrete]
 ==== Anwendungsbeispiel
@@ -542,6 +563,7 @@ image::artikel/neue-ui/assets/detailansicht-eigene-portlets.png[]
 * Sperren: icon:lock[set=material]
 * Aufträge erstellen: icon:shopping_cart[set=material] 
 * Auftrag teilen: icon:call_split[set=material]
+* NEU Attach storage locations und Detach storage locations
 
 Über icon:shopping_cart[set=material] lassen sich folgende Auftragstypen anlegen:
 * Gewährleistung: 
@@ -582,13 +604,14 @@ Im Bereich *Übersicht* siehst du alle Informationen zur Menge der Artikel und K
 |Die Versandkosten netto werden angezeigt.
 
 | *MwSt.*
-|Die Mehrwertsteuer wird in Euro angezeigt.
+|Die Mehrwertsteuer wird angezeigt.
 
 | *Artikelmenge*
 |Die Anzahl der Artikel wird angezeigt. +
 
 | *Steuerfreier Betrag*
 |Der Steuerfreie Betrag wird angezeigt.
+
 |====
 
 
@@ -608,7 +631,7 @@ Im Bereich *Status und Tags* siehst du den Status des Auftrags und die gewählte
 
 | *Tags*
 |Der aktuelle Tag wird angezeigt.
-|Wähle den Tag des Auftrags aus der Dropdown-Liste:
+|Wähle den Tag oder die Tags des Auftrags aus der Dropdown-Liste (Mehr hinzufügen):
 * Auftrags-Tag
 * Lieferdatum: gesetzt
 * Status: Geliefert
@@ -621,7 +644,7 @@ Im Bereich *Status und Tags* siehst du den Status des Auftrags und die gewählte
 [#portlet-address]
 === Bereich: Adressen
 Im Bereich *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadresse.
-Über icon:more_vert[set=material] rechts öffnet sich jeweils das Kontextmenü und ein Bearbeitungsfenster.
+Über icon:more_vert[set=material] rechts öffnet sich jeweils das Kontextmenü Icon Stift Bearbeiten. Klicke auf Icon, um in einem Bearbeitungsfenster die Angaben anzupassen.
 
 [[table-portlet-address]]
 .Bereich: Adressen
@@ -631,35 +654,35 @@ Im Bereich *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadres
 
 | *Rechnung*
 |Rechnungsadresse mit Land und ID (VAT fehlt). +
-Als Standard: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die Idee.
+Als Standardeinstellung sieht du: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID.
 
 | *Lieferung* 
 |Lieferadresse mit Land und ID (VAT fehlt). +
-Als Standard: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die Idee.
+Als Standardeinstellung sieht du: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die ID.
 
-// TODO: Info aus Kontextmenü - wie richtig darstellen?
+Folgende Daten kannst du angeben:
 Adressangaben
 * Anrede
 * Firma (Name 1)
-* Vorname
-* Nachname
-
-Zusatz
+* Vorname (Name 2)
+* Nachname (Name 3)
+* Zusatz (Name 4)
 * Adresse 1 (Straße)
 * Adresse 2 (Hausnummer)
 * Adresse 3 (Adresszusatz)
 * Adresse 4 (Frei)
 * Postleitzahl
-* Ort
-* Land - Dropdown
-* Region/Bezirk - Dropdown
+* Ort mit *
+* Land - wähle aus der Dropdown-Liste
+* Region/Bezirk - wähle aus der Dropdown-Liste
 
 Adressoptionen
 * E-Mail
 * Telefon
 * Typ: 
-Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
-eingeben und speichern
+Wähle aus der Dropdown-Liste: Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID.
+* Wert (ist abhängig vom Typ)
+// TODO: erklären lassen
 
 |====
 
@@ -676,7 +699,7 @@ Im Bereich *Allgemein* siehst du alle wichtigen Informationen zu deinem Auftrag 
 
 | *Zahlungsart*
 |Wähle die gewünschte Zahlungsart aus der Dropdown-Liste. +
-Die Standardeinstellung für Zahlungsart ist Vorkasse ?.
+Die Standardeinstellung für Zahlungsart ist Vorkasse ??.
 
 | *Auftragstyp*
 |Wähle den Auftragstyp aus der Dropdown-Liste. +
@@ -697,33 +720,25 @@ Die Standardeinstellung für Währung ist Euro (EUR).
 |Gib ein Datum ein oder wähle über den icon:today[set=material] eines aus.
 
 | *Versandprofil*
-|Das Versandprofil...
+|Das Versandprofil wird angezeigt.
 Über icon:search[set=material] kannst du Versandprofil und Porto ermitteln. Es öffnet sich ein schwarz hinterlegter Bereich mit Information. Danach kann die Versandart per Dropdown-Liste gewählt werden.
+// TODO: wo kommt der Wert her?
 
 | *Paketnummern*
 |Gib eine Paketnummer ein. +
-Durch das Symbol *Öffne das Versancenter* wird weitergeleitet zum Versandcenter 2.0.
-// TODO: 4 Symbole beschreiben
+Klicke auf Icon *Öffne das Versand-Center* und du wirst weitergeleitet zum Versand-Center 2.0. Dort werden dir die Details angezeigt. Die Detailansicht eines Versandauftrags ist in die folgenden Bereiche unterteilt: <<#uebersicht, Übersicht>>, <<#empfaenger, Empfänger>>, <<#pakete, Pakete>> und <<#retouren, Retouren>>. +
+
+// TODO: werden erklärt unter versand-center [#gruppenfunktion] und [[table-group-functions]]
+// TODO: Verweis auf [[table-functions-single-order]] .Verfügbare Funktionen im einzelnen Auftrag
+
 *Auftrag anmelden*
 *Polling*
 *Retoure anmelden*
 *Auftrag zurücksetzen*
-//// 
-// TODO: beschreiben oder auf Versandcenter 2.0 verweisen?
-4 Bereiche links in der Seitennavigation: 
-* Übersicht
-* Empfänger
-* Pakete, darunter
-ID, Bezeichnung, Gewichtt, Maße, Volumen, Anzahl der Artikel, Typ, Paketnummer, Erstellt:, Geändert:
-Über blau hinterlegt Bestätigen
 
-* Retouren
-ID
-Retouren-ID
-Retourendienstleister
-Angemeldet am 
-Gültig bis
-Paketnummer
+//// 
+auf Versandcenter 2.0 verweisen: versand-center-2-0.adoc: [#spalten-konfigurieren] und 
+Neue Filter sind: *Auftragsdatum von / bis*, *Auftragstyp*, *Land*
 ////
 
 | *Herkunft*
@@ -731,7 +746,7 @@ Paketnummer
 Die Standardeinstellung für für Herkunft ist Manuelle Eingabe [0].
 
 | *Rückgabedatum*
-|Gib ein Datum ein oder wähle über den Kalender eines aus.
+|Gib ein Datum ein oder wähle über icon:today[set=material] eines aus.
 
 | *Lager*
 |Abhängig vom Warenbestand 
@@ -744,13 +759,17 @@ Die Standardeinstellung für für Herkunft ist Manuelle Eingabe [0].
 
 [#portlet-order-positions]
 === Bereich: Auftragspositionen
-Im Portlet *Auftragspositionen* siehst du alle für den Auftrag relevante Informationen von Menge bis Preise.
+Im Bereich *Auftragspositionen* siehst du alle für den Auftrag relevante Informationen von Menge bis Preise. +
+Über icon:settings[set=material] kannst du die *Spalten konfigurieren*.
+Über Icon Stift kannst du in Artikel bearbeiten. Dies wird dir in der Seitennavigation links eingerückt in blauer Schrift angezeigt.
 
 [[table-order-positions]]
 .Bereich: Auftragspositionen
 [cols="1,3"]
 |====
 |Einstellung|Erläuterung
+
+2+^| *Auftragspositionen*
 
 |*Menge*
 |Die bestellte Menge der Auftragsposition wird angezeigt. +
@@ -823,12 +842,121 @@ Dies ist eine optionale Spalte.
 |*Eigenschafts-ID*
 |Die Eigenschafts-ID wird angezeigt. +
 Dies ist eine optionale Spalte.
+
+2+^| *Artikel*
+
+|*Bestandsstatus*
+|Balken Status wird angezeigt.
+
+|*Status*
+|Kreis Status wird angezeigt.
+
+|*Artikel-ID*
+|Die Artikel-ID wird angezeigt. (Link)
+
+|*Varianten-ID*
+|Die Varianten-ID wird angezeigt. (Link) +
+Diese Spalte ist eine Standardspalte.
+
+|*Variantennummer*
+|Die Variantennummer wird angezeigt.
+
+|*Artikelname*
+|Der Artikelname wird angezeigt.
+
+|*Attribute*
+|Die Attribute werden angezeigt.
+
+|*Variantenname*
+|Der Variantenname wird angezeigt.
+
+|*Barcode*
+|Der Barcode wird angezeigt.
+
+|*System-EK*
+|Der System-EK wird angezeigt.
+
+|*Preisauswahl*
+|Die Preisaufwahl wird angezeigt.
+
+|*Kategorierabatt*
+|Der Kategorierabatt wird angezeigt.
+
+|*Kundenklassenrabatt*
+|Der Kundenklassenrabatt wird angezeigt.
+
+|*Verfügbarkeit*
+|Die Verfügbarkeit wird angezeigt. +
+Die Verfügbarkeit wird in 3 farbigen Strichen dargestellt.
+
+|*Netto-WB*
+|Der Netto-Warenbestand wird angezeigt.
+
+|*Lager*
+|Das Lager wird angezeigt.
+
+|*Menge*
+|Die Menge wird angezeigt.
+
+Über icon:add_shopping_cart[set=material] kannst du Artikel zum Warenkorb hinzufügen.
+
+2+^| *Warenkorb*
+
+|*Menge*
+|Die Menge wird angezeigt.
+
+|*Artikel-ID*
+|Die Artikel-ID wird angezeigt. +
+Durch Klick auf die ID wird der Artikel geöffnet.
+
+|*Varianten-ID*
+|Die Varianten-ID der Auftragsposition wird angezeigt. +
+Durch Klick auf die ID wird die Variation geöffnet.
+
+|*Variantennummer*
+|Die Variantennummer wird angezeigt.
+
+|*Artikelname*
+|Der Artikelname wird angezeigt.
+
+|*Attribute*
+|Die Attribute werden angezeigt.
+
+|*Variantenname*
+|Der Variantenname wird angezeigt.
+
+|*Barcode*
+|Der Barcode wird angezeigt.
+
+|*Preisauswahl*
+|Die Preisaufwahl wird angezeigt.
+
+|*Nettopreis*
+|Der Nettopreis wird angezeigt. +
+Über Icon Stift kannst du den Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst.
+
+|*Bruttopreis*
+|Der Bruttopreis wird angezeigt.
+Über Icon Stift kannst du den Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst.
+
+|*Gesamtbetrag (brutto)*
+|Der Gesamtbetrag (brutto) wird angezeigt.
+
+|*Lager*
+|Das Lager wird angezeigt.
+
+|*USt. (%)*
+|Die Umsatzsteuer in % wird angezeigt. Voreinstellt sind 19.00 %. Über Dropdown kannst du den Steuersatz ändern. 
+
+Rechts über icon:delete[set=material] kannst du Auftragspositionen löschen.
 |====
 
 
 [#portlet-payment-terms]
 === Bereich: Zahlungsbedingungen
-Im Bereich *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Valuta (Tage)*, *Skonto (Tage)* und *Skonto (%)* werden die Zahlungsbedingungen dargestellt.
+Im Bereich *Zahlungsbedingungen* siehst du die Informationen *Zahlungsziel*, *Skonto (%)* und *Valuta (Tage)*.
+
+*_Wichtig_*: Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angeben sein. Wenn für Zahlungsziel nichts oder der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden auch nicht auf Dokumenten übernommen. +
 
 [[table-payment-terms]]
 .Bereich: Zahlungsbedingungen
@@ -840,18 +968,19 @@ Im Bereich *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Val
 |Das Zahlungsziel wird angezeigt. +
 
 | *Skonto (%)*
-|Das Skonto wird angezeigt. +
+|Das Skonto in Prozent wird angezeigt. +
+Über hoch/runter kannst du den Wert anpassen.
 
 | *Valuta (Tage)*
-|Die Valuta wird angezeigt. +
-|====
+|Die Valuta (Wertstellung) wird mit der Angabe Tage angezeigt. +
+Über hoch/runter kannst du den Wert anpassen.
 
-*_Wichtig_*: Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angeben sein. Wenn für Zahlungsziel nichts oder der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden auch nicht auf Dokumenten übernommen. +
+|====
 
 
 [#portlet-bank-data]
 === Bereich: Bankdaten
-Im Bereich *Bankdaten* kannst du über Icon + die Bankddaten eingeben, durch Klick auf + öffnet sich ein Fenster *Neue Bankdaten*. Dort kannst du die erforderlichen Daten eingeben. Felder mit Stern sind Pflichtfelder.
+Im Bereich *Bankdaten* kannst du über Bankddaten eingeben. Klicke auf icon:add[set=material], um das Fenster *Neue Bankdaten* zu öffnen. Dort kannst du die erforderlichen Daten eingeben. Felder mit * sind Pflichtfelder. Nutze icon:toggle_on[set=material, role=skyBlue] links unten, um das *SEPA-Lastschriftmandat* zu aktivieren. Wenn es aktiviert ist, öffnet sich ein neuer Bereich darunter. Dort kannst du die Informationen zum Lastschriftmandat eingeben und speichern.
 
 [[table-bank-data]]
 .Bereich: Bankdaten
@@ -864,22 +993,23 @@ Im Bereich *Bankdaten* kannst du über Icon + die Bankddaten eingeben, durch Kli
 Dieses Feld ist ein Pflichtfeld.
 
 | *BIC*
-|Gib die *BIC* ein.
+|Gib die *BIC* ein. +
+Dieses Feld ist ein optionales Feld.
 
 | *Inhaber:in*
 |Gib den/die *Inhaber:in* ein. +
 Dieses Feld ist ein Pflichtfeld.
 
 | *Kontonummer*
-|Gib die *Kontonummer* ein.
+|Gib die *Kontonummer* ein. +
 Dieses Feld ist ein optionales Feld.
 
 | *Bankleitzahl*
-|Gib die *Bankleitzahl* ein.
+|Gib die *Bankleitzahl* ein. +
 Dieses Feld ist ein optionales Feld.
 
 | *Bank*
-|Gib den Namen der *Bank* ein.
+|Gib den Namen der *Bank* ein. +
 Dieses Feld ist ein optionales Feld.
 
 | *Straße der Bank*
@@ -892,10 +1022,6 @@ Dieses Feld ist ein optionales Feld.
 
 | *Land der Bank*
 |Wähle das *Land der Bank* aus der Dropdown-Liste.
-
-// TODO: wie anordnen?
-|Nutze icon:toggle_on[set=material, role=skyBlue], um das *SEPA-Lastschriftmandat* zu aktivieren.
-Wenn es aktiviert ist, öffnet sich ein neuer Bereich darunter.
 
 | *SEPA-Lastschriftmandat*
 |angezeigt wird *SEPA-Lastschriftmandat erteilt am*.
@@ -912,8 +1038,9 @@ Du kannst das Datum durch Eingabe eines neuen Datums ändern.
 
 [#portlet-assigned-payments]
 === Bereich: Zugeordnete Zahlungen
-Im Bereich *Zugeordnete Zahlungen* siehst du...
-Über + kannst du *Zahlung erstellen*. Über icon:settings[set=material] kannst du die *Spalten konfigurieren*
+Im Bereich *Zugeordnete Zahlungen* siehst du alle Informationen zu den Zahlungen. + 
+Über icon:settings[set=material] kannst du die *Spalten konfigurieren*.
+Über icon:add[set=material] kannst du eine *Zahlung erstellen*. 
 
 [[table-assigned-payments]]
 .Bereich: Zugeordnete Zahlungen
@@ -930,29 +1057,57 @@ Im Bereich *Zugeordnete Zahlungen* siehst du...
 | *Offen*
 |Der Betrag *Offen* wird angezeigt.
 
-// TODO: wie darstellen?
-Spalten
-* Zahlungs-ID
-* Eltern-ID
-* Auftrags-ID
-* Kunden-ID
-* Zahlungsart
-* Soll/Haben
-* Betrag
-* Status 
-* Verwendungszweck
-* Absender der Zahlung
-* Eingangsdatum
-* Importiert
-* Aktion
+|====
+
+
+[[table-assigned-payments-availabe-columns]]
+.Verfügbare Spalten
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
+
+| *Zahlungs-ID*
+|Die Zahlungs-ID wird angezeigt.
+
+| *Eltern-ID*
+|Die Eltern-ID wird angezeigt.
+
+| *Auftrags-ID*
+|Die Auftrags-ID wird angezeigt.
+
+| *Kunden-ID*
+|Die Kunden-ID wird angezeigt.
+
+| *Zahlungsart*
+|Die Zahlungsart wird angezeigt.
+
+| *Soll/Haben*
+|Die Soll/Haben wird angezeigt.
+
+| *Betrag*
+|Der Betrag wird angezeigt.
+
+| *Status*
+|Der Status wird angezeigt.
+
+| *Verwendungszweck*
+|Der Verwendungszweck wird angezeigt.
+
+| *Absender der Zahlung*
+|Der Absender der Zahlung wird angezeigt.
+
+| *Eingangsdatum*
+|Der Eingangsdatum wird angezeigt.
+
+| *Importiert*
+|Es wird angezeigt...
+
 |====
 
 
 [#portlet-order-referrer]
-
-[portlet-order-referrer]
 === Bereich: Auftragsrefenzen
-Im Bereich *Auftragsreferenzen* siehst du...
+Im Bereich *Auftragsreferenzen* siehst du die mit dem Auftrag verbundenen Informationen.
 Über icon:settings[set=material] kannst du die Spalten konfigurieren.
 
 [[table-order-referrer]]
@@ -962,7 +1117,8 @@ Im Bereich *Auftragsreferenzen* siehst du...
 |Einstellung|Erläuterung
 
 | *Beziehung*
-|Kind
+|Die Beziehung zum Auftragstyp wird angezeigt.
+Parent - child
 
 | *ID*
 |Die *ID* wird angezeigt.
@@ -974,7 +1130,7 @@ Im Bereich *Auftragsreferenzen* siehst du...
 |Wähle
 
 | *Status*
-|Der *Status* wird angezeigt.
+|Der *Status* der Bearbeitung wird angezeigt.
 
 | *Erstellt*
 |Das Datum, an dem der Auftrag erstellt wurde, wird angezeigt.
@@ -986,10 +1142,11 @@ Im Bereich *Auftragsreferenzen* siehst du...
 |Die gewählte *Zahlungsart* wird angezeigt.
 
 | *Rechnungsadresse*
-|Die **Rechnungsadresse** wird angezeigt.
+|Die im Datensatz des Kontaktes hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte übernommen. 
 
 | *Lieferadresse*
-|Die **Lieferadresse** wird angezeigt.
+|Wenn du die Option *Wie Rechnung* gewählt hast, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontaktes hinterlegte Lieferadresse übernommen.
+
 |====
 
 
@@ -1008,30 +1165,31 @@ Im Portlet *Eigenschaften* siehst du...
 |Die Typ-ID wird angezeigt.
 
 | *Name*
-|Der ? wird angezeigt.
+|Der Name der Auftragseigenschaft wird angezeigt.
 
 | *Wert*
-|Der ? wird angezeigt.
+|Der Wert der Auftragseigenschaft wird angezeigt.
 
 | *Erstellungsdatum*
 |Das Erstellungsdatum mit Uhrzeit wird angezeigt.
 
 | *Letze Änderung*
 |Das Datum der letzten Änderung wird mit Uhrzeit angezeigt.
+
 |====
 
 
 [#portlet-documents]
 === Bereich: Dokumente
-Im Bereich *Dokument* siehst du *Alle Dokumente* und *Archvierte Dokumente*.
+Im Bereich *Dokumente* siehst du *Alle Dokumente* und *Archvierte Dokumente*, also alle dem Auftrag zugehörigen Dokumente.
+// TODO: Verweis auf die Seite auftragsdokumente.adoc
 
-Über icon:settings[set=material] und *Gespeicherte Filter*.
-Über Dokument + kannst du ein neues *Dokument erstellen*.
-Über icon:filter_alt[set=material] öffnet sich ein Pop-up Fenster
-Erstellt am Symbol Kalender
-Aktualisiert am Symbol Kalender
-Datum anzeigen am Symbol Kalender
-Über icon:search[set=material] kann die Suche ausgeführt werden.
+// TODO: anders gestalten
+Erstellt am icon:calender_month[set=material]
+Aktualisiert am icon:calender_month[set=material]
+Datum anzeigen am icon:calender_month[set=material]
+. Klicke auf icon:search[set=material], um die Suche auszuführen.
+
 
 [[table-documents]]
 .Dokumente
@@ -1040,9 +1198,10 @@ Datum anzeigen am Symbol Kalender
 |Einstellung|Erläuterung
 
 | *Alle Dokumente*
-|Im Ordner *Alle Dokumente* finden sich: je Symbol Dokument davor und Anzahl dahinter
-// TODO: wie darstellen? Verweis wohin?
-* Rechnung
+a|Im Ordner *Alle Dokumente* findest du die folgenden Dokumente:
+
+// TODO: Link zum jeweiligen Dokument hinter Rechnung usw.
+* icon:description[set=material] *Rechnung*
 * Externe Rechnung
 * Lieferschein
 * Mahnschreiben
@@ -1055,7 +1214,8 @@ Datum anzeigen am Symbol Kalender
 * Rücksendeschein
 
 | *Archivierte Dokumente*
-|Im Ordner *Archivierte Dokumente* finden sich: 
+a|Im Ordner *Archivierte Dokumente* findest du:
+
 * Lieferschein
 * Bestellbestätigung
 * Gelangensbestätigung
@@ -1063,7 +1223,8 @@ Datum anzeigen am Symbol Kalender
 * Abhollieferung
 * Rücksendeschein
 
-Über Symbol + kannst du ein neues Dokument erstellen
+// TODO: Überschrift und Unterkapitel
+Über icon:note_add[set=material] können neue Dokumente erstellt werden.
 * Rechnung 
 * Lieferschein
 * Bestellbestätigung
@@ -1098,16 +1259,17 @@ Datum anzeigen am Symbol Kalender
 |Das Datum der letzten Änderung wird angezeigt.
 
 | *Aktionen*
-|Über icon:more_vert[set=material] kommt Symbol Herunterladen icon:download[set=material]
+|Über icon:more_vert[set=material] wird Herunterladen icon:download[set=material] des Dokuments möglich.
+
 |====
 
 
 [#portlet-history]
 === Bereich: Historie
-Im Bereich *Historie* siehst du alle ...
+Im Bereich *Historie* siehst du eine Übersicht der getätigten Aktionen mit Status und Datum.
 
 [[table-history]]
-.Historie
+.Bereich: Historie
 [cols="1,3"]
 |====
 |Einstellung|Erläuterung
@@ -1123,6 +1285,10 @@ Im Bereich *Historie* siehst du alle ...
 
 | *Status*
 |Der aktuelle *Status* wird angezeigt.
+
+| *Datum*
+|Das *Datum* wird mit Uhrzeit angezeigt.
+
 |====
 
 
@@ -1131,15 +1297,15 @@ Im Bereich *Historie* siehst du alle ...
 Der Bereich *Waren zurückbuchen* lässt sich öffnen, wenn du in einer *Retoure* auf *Waren zurückbuchen* gehst. Über icon:input[set=material] kannst du den Bereich öffnen. Der Titel erscheint nach dem Anlegen auch links in der Seitennavigation. In einer Retoure ist icon:input[set=material] immer zu sehen. In einem (Haupt-)Auftrag oder einer Garantie siehst du das Icon nur dann, wenn ein versandter Artikel hinterlegt ist.
 Über icon:settings[set=material] kannst du auch in diesem Bereich die Spalten konfigurieren.
 
+[.instruction]
+Gehe folgendermaßen vor, um Waren zurückzubuchen:
 
-. Wähle die Retoure
-. Wähle im Bereich Allgemein das Datum für die Rückbuchung. 
+. Wähle die Retoure, für die du Waren zurückbuchen möchtest.
+. Wähle im Bereich *Allgemein* das Datum für die Rückbuchung (Rückgabedatum). 
 . Klicke auf icon:save[set=material]. +
 -> das Bearbeitungsfenster für *Waren zurückbuchen* öffnet sich und neben dem Warenkorb wird icon:input[set=material] sichtbar. 
 
-
-Es ist genauso aufgebaut wie die anderen Auftragstypen.
-
+// TODO: Die Standard-Reihenfolge ändert sich evtl. noch
 [[table-book-back-item]]
 .Waren zurückbuchen
 [cols="1,3"]
@@ -1147,7 +1313,7 @@ Es ist genauso aufgebaut wie die anderen Auftragstypen.
 |Einstellung|Erläuterung
 
 2+^| *Artikel*
-// TODO: Die Standard-Reihenfolge ändert sich evt.
+
 | *Menge*
 |Die *Menge* wird angezeigt.
 
@@ -1164,14 +1330,18 @@ Es ist genauso aufgebaut wie die anderen Auftragstypen.
 |Das *MHD* wird angezeigt.
 
 | *Artikel-ID*
-|Die *Artikel-ID* wird angezeigt.
+|Die *Artikel-ID* wird angezeigt. (Link)
+
+| *Attribute*
+| Die Attribute werden angezeigt.
 
 | *Varianten-ID*
 |Die *Varianten-ID* wird angezeigt.
 
 | *Artikelname*
 |Die *Artikelname* wird angezeigt.
-Rechts am Rand kannst du über icon:add_shopping_cart[set=material] Artikel zum Warenkorb hinzufügen.
+
+Rechts kannst du über icon:add_shopping_cart[set=material] Artikel zum Warenkorb hinzufügen. Ist das Icon grau, ist die maximale offene Menge erreicht.
 
 2+^| *Warenkorb*
 // TODO: Reihenfolge siehe oben.
@@ -1180,19 +1350,19 @@ Rechts am Rand kannst du über icon:add_shopping_cart[set=material] Artikel zum 
 Die Menge der zurück zu buchenden Waren/Artikel kann nicht höher sein als die offene Menge.
 
 | *Lager* (single select)
-|Die
+|Das ausgewählte Lager wird angezeigt.
 
 | *Lagerort* (see purchase order transactions)
-|Die
+|Der ausgewählte Lagerort wird angezeigt.
 
-| *Menge im Auftrag* (display field)
-|Die
+| *Auftragsmenge*
+|Die Auftragsmenge wird angezeigt.
 
 | *Charge* (display field)
-|Die
+|Die ? wird angezeigt.
 
-| *Mindesthaltbarkeitsdatum (MHD)* (display field)
-|Die
+| *Mindesthaltbarkeitsdatum (MHD)*
+|Das MHD wird angezeigt.
 
 | *Artikel-ID*
 |Die *Artikel-ID* wird angezeigt.
@@ -1202,6 +1372,9 @@ Die Menge der zurück zu buchenden Waren/Artikel kann nicht höher sein als die 
 
 | *Variantenname*
 |Die *Variantenname* wird angezeigt.
+
+| *Rückbuchung*
+|Die Anzahl der Rückbuchung wird angezeigt und kann über hoch/runter verändert werden. Die Offene Menge wird automatisch angepasst.
 
 |====
 
@@ -1479,7 +1652,7 @@ Dies ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 |*Mandanten-ID*
-|Die ID des Mandanten… wird angezeigt. +
+|Die ID des Mandanten wird angezeigt. +
 Diese Spalte ist eine Standardspalte.
 
 |*Standort*
@@ -2009,11 +2182,7 @@ Auswahl:
 
 | *Warenausgang*
 |Gib ein Datum ein oder wähle ein Datum über den Kalender, um alle Aufträge zu suchen, die an diesem Datum verschickt wurden. +
-Alle, 
-Nicht gebucht, 
-gebucht, 
-Heute, 
-Gestern
+Du kannst wählen: Alle, Nicht gebucht, gebucht, Heute, Gestern
 // TODO: Wie darstellen?
 
 2+^| *Status*
