ADD work to the item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -69,11 +69,12 @@ xref:artikel:suche.adoc#[Weitere Informationen].
 --
 
 [.collapseBox]
-.*Was macht ein bestimmtes Feld im Artikeldatensatz?*
+.*Ich verstehe ein Feld im Artikeldatensatz nicht. Kann ich die Funktion nachschlagen?*
 --
 
 //ToDo - sobald die neue Artikel-UI als standard eingebunden wird, dann den Link anpassen, damit es zur neuen Verzeichnis-Seite weiterleitet und auch den Text ab Satz 2 als include einbinden aus der Intro der neuen Verzeichnis-Seite
 
+Ja.
 Wirf einen Blick auf das xref:artikel:import-export-anlage-verzeichnis.adoc#[Verzeichnis der Datenfelder].
 Diese Seite dient als Referenz.
 Sie erklärt die verschiedenen Tabs und Datenfelder eines Artikeldatensatzes.
@@ -150,6 +151,8 @@ xref:artikel:preise.adoc#[Weitere Informationen].
 .*Mein Lieferant hat mir eine Datei mit neuen EKs geschickt. Wie kann ich die neuen EK-Preise importieren?*
 --
 
+//Frage ist auch im Bereich Massenbearbeitung zu finden.
+
 plentymarkets verfügt über ein Import-Tool.
 Die Idee ist einfach.
 Anstatt Informationen in plentymarkets manuell zu speichern, sammelst du die gleiche Informationen in eine CSV-Datei und importierst diese Datei dann in dein System.
@@ -176,14 +179,6 @@ include::page$preise.adoc[tag=faq-change-history]
 --
 
 [.collapseBox]
-.*Ich bin verpflichtet, den niedrigsten Preis der letzten 30 Tage anzuzeigen. Wie mache ich das?*
---
-
-include::page$verzeichnis.adoc[tag=lowest-price-thirty-days]
-
---
-
-[.collapseBox]
 .*Wie kann ich den UVP als durchgestrichenen Preis im Webshop anzeigen?*
 --
 
@@ -192,14 +187,12 @@ include::page$preise.adoc[tag=faq-strikethrough-price]
 --
 
 [.collapseBox]
-.*Text*
+.*Ich bin verpflichtet, den niedrigsten Preis der letzten 30 Tage anzuzeigen. Wie mache ich das?*
 --
 
-Text
+include::page$verzeichnis.adoc[tag=lowest-price-thirty-days]
 
 --
-
-#Wie mache ich# einen Aktionspreis außer nur UVP? Text z.B. alter Preis
 
 [#300]
 == Attribute
@@ -211,16 +204,6 @@ Text
 include::page$attribute.adoc[tag=faq-attribute-property-characteristic]
 
 --
-
-[.collapseBox]
-.*Text*
---
-
-Text
-
---
-
-#Wenn ich Varianten# anlegen will, werden all meine bereits angelegte Attribute gar nicht angezeigt. Warum?
 
 [.collapseBox]
 .*Meine Attribute lassen sich nicht löschen. Warum nicht?*
@@ -255,14 +238,12 @@ include::page$attribute.adoc[tag=faq-add-attribute-existing-item]
 --
 
 [.collapseBox]
-.*Text*
+.*#Ich will Varianten# erzeugen. Mir werden aber nicht alle Attribute zur Auswahl angeboten. Wo liegt der Fehler?*
 --
 
 Text
 
 --
-
-#Ich will Varianten# erzeugen. Mir werden aber nicht alle Attribute zur Auswahl angeboten. Wo liegt der Fehler?
 
 [#300]
 == Eigenschaften
@@ -364,8 +345,10 @@ xref:artikel:bilder.adoc#200[Weitere Informationen].
 --
 
 [.collapseBox]
-.*#Ich will viele Bilder# hochladen. Wie mache ich das am effizientesten?*
+.*#Ich muss ziemlich viele Bilder# hochladen. Wie mache ich das am effizientesten?*
 --
+
+//denk auch an die fast gleiche Frage under Massenbearbeitung
 
 Text
 
@@ -408,24 +391,27 @@ Es ist aber auch möglich, variantenspezifische Texte zu speichern.
 == Massenbearbeitung
 
 [.collapseBox]
-.*Text*
+.*Welche Möglichkeiten habe ich, viele Artikeldatensätze gleichzeitig in plentymarkets zu bearbeiten?*
 --
 
-Text
+include::page$massenbearbeitung.adoc[tag=batchprocessing-timeout]
 
 --
-
-#Mein Lieferant hat# mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
 
 [.collapseBox]
-.*Text*
+.*Praxisbeispiel: Mein Lieferant hat mir eine Datei mit neuen EKs geschickt. Wie kann ich die neuen EK-Preise importieren?*
 --
 
-Text
+//Frage ist auch im Bereich Preise zu finden.
 
+plentymarkets verfügt über ein Import-Tool.
+Die Idee ist einfach.
+Anstatt Informationen in plentymarkets manuell zu speichern, sammelst du die gleiche Informationen in eine CSV-Datei und importierst diese Datei dann in dein System.
+
+* xref:daten:ElasticSync.adoc#[Weitere Informationen zum Import-Tool].
+* xref:videos:datenimport-mit-elasticsync.adoc#[Video-Tutorial mit einem Beispiel für den Import von EKs].
+* xref:daten:elasticSync-artikel.adoc#2450[Verzeichnis der verfügbaren Zuordnungs- und Abgleichsfelder].
 --
-
-#Was ist der Unterschied# zwischen Gruppenfunktion und Stapelbearbeitung?
 
 [.collapseBox]
 .*#Praxisbeispiel#: Mein Hersteller hat ein Zubehörteil umbenannt. Wie ändere ich den Namen in allen Artikeltexten?*
@@ -444,24 +430,30 @@ Text
 --
 
 [.collapseBox]
-.*Text*
+.*Die Stapelverarbeitung bricht ab. Warum? Wo liegt das Problem?*
 --
 
-Text
+include::page$massenbearbeitung.adoc[tag=batchprocessing-timeout]
 
 --
-
-#Ab wann bricht# das Stapelverarbeitung ab?
 
 [.collapseBox]
-.*Text*
+.*#Kann ich einen FTP-Server# verwenden, um z.B. viele Artikelbilder gleichzeitig hochzuladen?*
 --
+
+//denk auch an die fast gleiche Frage unter Bilder
 
 Text
 
 --
 
-#Wie schaut's aus# mit FTP
+[.collapseBox]
+.*#Kann ich eine REST-API-Schnittstelle# für den Datenaustausch mit plentymarkets verwenden?*
+--
+
+Text
+
+--
 
 [.collapseBox]
 .*#Ich verkaufe bereits# auf Amazon, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von Amazon übernehmen?*
@@ -480,20 +472,19 @@ Text
 --
 
 [.collapseBox]
-.*Text*
+.*#Ich verstehe das Import-Tool# nicht so richtig. Kann ich irgendwelche Beispiele sehen?*
 --
 
-Text
+Ja.
 
---
-
-#Gibt es Beispiele# für den Import?
 -Videos
 -Artikel + Varianten
 -Kategorien
 -Eigenschaften
 -Facetten
 -usw,
+
+--
 
 
 [#600]
